# bluesky-stats

./: Dockerfile  LICENSE  Makefile  README.md  bluesky-stats.cabal  cabal.project  docker-compose.dev.yml  flake.nix  hie.yaml
.github/workflows/: CI.yaml
agent/: Main.hs
app/: Main.hs  StaticFiles.hs
src/: Lib.hs
test/: Spec.hs
