cabal-version:   2.4
name:            bluesky-stats
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          JCGrant
maintainer:      JCGrant <james@jcgrant.com>
copyright:       2024 JCGrant
tested-with:     GHC ==8.6.5 || ==8.8.3 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/bluesky-stats#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/bluesky-stats.git

common common-options
  build-depends:
    , base >=4.9 && <5
    , aeson
    , blaze-markup
    , yesod
    , yesod-static
    , persistent
    , persistent-sqlite
    , persistent-postgresql
    , resourcet
    , monad-logger
    , time
    , transformers
    , http-conduit
    , shakespeare
    , wai-extra < 3.1.17
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib

executable bluesky-stats-app
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  bluesky-stats
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

executable bluesky-stats-agent
  import:         common-options
  hs-source-dirs: agent
  main-is:        Main.hs
  build-depends:  bluesky-stats
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
